2006-04-11  Gary Cramblitt <garycramblitt@comcast.net>

	* src/tests/run_test.c: Add "wait for <str>" operator.  Useful for waiting
	for event notifications.

	* src/tests/README: Document "wait for".

	* src/tests/stop_and_pause.test: Use "wait for".

	* doc/ssip.texi: Minor correction for CANCEL notification.

2006-04-10  Gary Cramblitt <garycramblitt@comcast.net>

	* src/c/clients/say/say.c, options.h, options.c:
	* doc/spd-say.texi: Add --ssml (-x) option for speaking SSML text.

	* config/modules/ibmtts.conf:
	* config/speechd.conf.in:
	* src/modules/ibmtts.c, Makefile.am: 
	* src/configure.in.in: New output module for IBM TTS synthesizer.
	It compiles and even speaks, but don't expect much else right now.

	* src/modules/module_utils.c, src/c/api/libspeechd.c: Remove do
	nothing statement in xfree().

	* src/tests/basic.test: Minor spelling and grammar corrections.

	* src/tests/ssml.test: Start on new SSML test script.

	* src/tests/stop_and_pause.test: A script for testing STOP and PAUSE functions.

	* doc/speech-dispatcher.texi: Corrections and clarifications.

2006-04-10  Hynek Hanke  <hanke@chopin>

	* COPYING: Added GNU Lesser General Public License.

	* src/modules/module_utils.c: Relicensed to GNU Lesser General
	Public License

	* src/modules/module_utils.h: Relicensed to GNU Lesser
	General Public License

	* src/modules/module_utils_addvoice.c: Relicensed to GNU Lesser
	General Public License

	* src/modules/module_main.c: Relicensed to GNU Lesser
	General Public License

	* src/audio: Relicensed to GNU Lesser General Public License

2006-04-07  Gary Cramblitt <garycramblitt@comcast.net>

	* /src/modules/flite.c: Correct DBG "NAS" -> "ALSA"

2006-04-06  Gary Cramblitt <garycramblitt@comcast.net>

	* src/modules/module_utils.h: Fix broken macro (not previously used).

2006-03-31  Tomas Cerha  <cerha@brailcom.org>

	* FAQ: Formatting improved.

2006-03-30  Gary Cramblitt <garycramblitt@comcast.net>
