@@ -166,3 +166,47 @@ IbmttsDialect "StandardDanish"               "000F0000"
 IbmttsDialect "StandardReserved"             "00100000"
 IbmttsDialect "StandardThai"                 "00110000"
 IbmttsDialect "StandardThaiTIS"              "00110000"
+
+# -- KEY NAME SUBSTITUTIONS --
+
+# Maps Speech Dispatcher key names used in SSIP KEY commands to speakable words.
+# The string in the "SD Key" column occurring anywhere in a KEY command
+# is replaced with the string in "Spoken".  The substitutions occur in the
+# order listed.
+
+#                     SD Key      Spoken
+#                     ----------- -----------
+IbmttsKeySubstitution "kp--"      "keypad minus "
+IbmttsKeySubstitution "kp-"       "keypad "
+IbmttsKeySubstitution "_"         " "
+IbmttsKeySubstitution "#"         "pound "
+IbmttsKeySubstitution "&"         "ampersand "
+IbmttsKeySubstitution "!"         "exclamation mark "
+IbmttsKeySubstitution "|"         "pipe "
+IbmttsKeySubstitution "A"         "capital A "
+IbmttsKeySubstitution "B"         "capital B "
+IbmttsKeySubstitution "C"         "capital C "
+IbmttsKeySubstitution "D"         "capital D "
+IbmttsKeySubstitution "E"         "capital E "
+IbmttsKeySubstitution "F"         "capital F "
+IbmttsKeySubstitution "G"         "capital G "
+IbmttsKeySubstitution "H"         "capital H "
+IbmttsKeySubstitution "I"         "capital I "
+IbmttsKeySubstitution "J"         "capital J "
+IbmttsKeySubstitution "K"         "capital K "
+IbmttsKeySubstitution "L"         "capital L "
+IbmttsKeySubstitution "M"         "capital M "
+IbmttsKeySubstitution "N"         "capital N "
+IbmttsKeySubstitution "O"         "capital O "
+IbmttsKeySubstitution "P"         "capital P "
+IbmttsKeySubstitution "Q"         "capital Q "
+IbmttsKeySubstitution "R"         "capital R "
+IbmttsKeySubstitution "S"         "capital S "
+IbmttsKeySubstitution "T"         "capital T "
+IbmttsKeySubstitution "U"         "capital U "
+IbmttsKeySubstitution "V"         "capital V "
+IbmttsKeySubstitution "W"         "capital W "
+IbmttsKeySubstitution "X"         "capital X "
+IbmttsKeySubstitution "Y"         "capital Y "
+IbmttsKeySubstitution "Z"         "capital Z "
+
